<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    tools:context=".ui.main.MainActivity">

    <include
        android:id="@+id/includeProgress"
        android:visibility="gone"
        layout="@layout/layout_loading"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/commerces_list"
            style="@style/Title_Text_Dark"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llInfo"
        android:weightSum="2"
        android:paddingHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:orientation="horizontal">
    
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_8"
            style="@style/Background_Dark_Layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNumberCommerces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                style="@style/Normal_Text_White"
                tools:text="101"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                style="@style/Normal_Text_White"
                android:text="@string/commerces"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_8"
            style="@style/Background_Layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNumberCommercesNear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                style="@style/Normal_Text_Orange"
                tools:text="10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                style="@style/Normal_Text_Dark"
                android:text="@string/near_1km"/>

        </LinearLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_16"
        android:scrollbars="none"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@+id/llInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvCategoryAll"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="14dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/margin_8"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/margin_8">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:src="@drawable/placeholder"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Normal_Text_Dark"
                        android:textSize="15sp"
                        android:text="@string/categories"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvCategory1"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/margin_8"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/margin_8">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:src="@drawable/ees_colour"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Normal_Text_Orange"
                        android:textColor="@color/orange_light"
                        android:textSize="15sp"
                        android:text="@string/category_1"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCategory2"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/margin_8"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/margin_8">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:src="@drawable/catering_colour"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Normal_Text_Yellow"
                        android:textSize="15sp"
                        android:text="@string/category_2"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCategory3"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:orientation="horizontal"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/margin_8"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/margin_8">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:src="@drawable/leisure_colour"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Normal_Text_Purple"
                        android:textSize="15sp"
                        android:text="@string/category_3"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCommerces"
        android:paddingHorizontal="@dimen/margin_16"
        tools:itemCount="10"
        tools:listitem="@layout/item_commerce"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>