<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_light">

    <include
        android:id="@+id/includeProgress"
        android:visibility="gone"
        layout="@layout/layout_loading"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ivBack"
            android:padding="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_left"/>
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Title_Text_Dark"
            android:ellipsize="end"
            tools:text="dasdasdasdasdasdasdasasdasdasdasdas"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:textAlignment="center"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetail"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"

                android:layout_marginHorizontal="@dimen/margin_16"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="horizontal"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/margin_8"
                app:cardElevation="4dp">
                <ImageView
                    android:id="@+id/ivCommerce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/only_image"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/llMapTtile"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginHorizontal="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@+id/cvImage"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/Normal_Text_Dark"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:text="@string/localization"/>
                <TextView
                    android:id="@+id/tvMap"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    style="@style/Normal_Text_Blue"
                    android:textSize="17sp"
                    android:text="@string/route"/>
            </LinearLayout>

            <fragment
                android:id="@+id/mvMap"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                app:layout_constraintTop_toBottomOf="@+id/llMapTtile"
                tools:context=".ui.detail.DetailActivity"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_32"
                android:padding="@dimen/margin_16"
                android:background="@drawable/rounded_background"
                app:layout_constraintTop_toBottomOf="@+id/mvMap">
                <ImageView
                    android:id="@+id/ivRefresh"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/placeholder"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/margin_8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivRefresh">
                    <TextView
                        android:id="@+id/tvDetail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Normal_Text_Dark"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvDetail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Normal_Text_Dark"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/tvDetail3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Normal_Text_Dark"
                        android:textSize="13sp"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvAboutTitle"
                android:layout_marginHorizontal="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@+id/clInfo"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Normal_Text_Dark"
                android:text="@string/about_commerce"
                android:textSize="16sp"
                android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:padding="@dimen/margin_16"
            android:background="@drawable/rounded_background"
            app:layout_constraintTop_toBottomOf="@+id/tvAboutTitle">
            <TextView
                android:id="@+id/tvABout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Normal_Text_Dark"
                android:text="@string/about_commerce"
                android:textSize="13sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>